[package]
name = "ena"
version = "0.1.0"
authors = ["Pluie"]

description = "A 4chan scraper"
license = "AGPL-3.0"

[dependencies]
actix = "0.7"
chrono = "0.4"
failure = "0.1"
futures = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
log = "0.4"
mysql_async = "0.15"
pretty_env_logger = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
toml = "0.4"
