[package]
name = "ena"
version = "0.1.0"
authors = ["Pluie"]
edition = "2018"

description = "A 4chan scraper"
license = "AGPL-3.0"

[features]
vendored-openssl = ["hyper-tls/vendored"]

[dependencies]
actix = { version = "0.7", default-features = false }
chrono = { version = "0.4", default-features = false }
chrono-tz = "0.5"
env_logger = "0.6"
failure = "0.1"
futures = "0.1"
hyper = { version = "0.12", default-features = false }
hyper-tls = "0.3"
lazy_static = "1.2"
log = "0.4"
mysql_async = "0.17"
pest = "2.0"
pest_derive = "2.0"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.1", default-features = false }
toml = "0.4"
twox-hash = "1.1"
